AP-16092: Code style / sonar (no functional changes)
AP-16092 (Multiple sources for customization profiles)